--- a/TransformationInsercionInfo.ipynb
+++ b/TransformationInsercionInfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "446df6c1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f41547b7",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
     "            if line == '':\n",
     "                break\n",
     "            restaurant = json.loads(line)\n",
-    "            dumpLine = \"{0},{1},{2},{3}'\\n\".format(restaurant[\"_id\"][\"$oid\"],\n",
+    "            dumpLine = \"{0},\\\"{1}\\\",\\\"{2}\\\",\\\"{3}\\\"\\n\".format(restaurant[\"_id\"][\"$oid\"],\n",
     "                                                   restaurant['location']['coordinates'],\n",
     "                                                   restaurant[\"name\"],\n",
     "                                                   restaurant[\"location\"][\"type\"])\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6a512f80",
    "metadata": {},
    "outputs": [],
