Falta resolver la duda de si son puntos o latitud y longitud

--- a/TransformationInsercionInfo.ipynb
+++ b/TransformationInsercionInfo.ipynb
@@ -15,6 +15,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "afc338c6",
+   "metadata": {},
+   "source": [
+    "# Falta saber si son poligonos en un plano o puntos en un globo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d30da01",
    "metadata": {},
    "source": [
